# compare_sql_tables

./: .gitignore  comparacion.csv  file.csv  flake.nix  modified.csv  my.csv  other.csv  pyproject.toml
compare_sql_tables/: __init__.py
